--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
     </plugin>
    </plugins>
   </pluginManagement>
+  <plugin>
+   <groupId>com.google.appengine</groupId>
+   <artifactId>appengine-maven-plugin</artifactId>
+   <version>1.9.64</version>
+</plugin>
   <plugins>
    <plugin>
     <groupId>com.jayway.maven.plugins.android.generation2</groupId>
