--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,11 @@
    <version>2.2.1</version>
    <scope>provided</scope>
   </dependency>
+  <dependency>
+   <groupId>com.google.appengine</groupId>
+   <artifactId>appengine-maven-plugin</artifactId>
+   <version>1.9.64</version>
+</dependency>
  </dependencies>
  <build>
   <finalName>${project.artifactId}</finalName>
