--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,21 @@
  <name>Maven Example</name>
 
  <dependencies>
+     <dependency>
+      <groupId>org.apache.maven</groupId>
+      <artifactId>maven-plugin-api</artifactId>
+      <version>3.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.sonatype.aether</groupId>
+      <artifactId>aether-api</artifactId>
+      <version>1.8</version>
+    </dependency>
+    <dependency>
+      <groupId>org.sonatype.aether</groupId>
+      <artifactId>aether-util</artifactId>
+      <version>1.8</version>
+    </dependency>
   <dependency>
    <groupId>com.google.android</groupId>
    <artifactId>android</artifactId>
