--- a/buildwar/pom.xml
+++ b/buildwar/pom.xml
@@ -334,6 +334,11 @@ Creates a war file. Also includes additional static web resources, such as image
  <dependency>
     <groupId>org.slf4j</groupId>
     <artifactId>slf4j-api</artifactId>
+    <version>1.7.3</version>
+</dependency>
+ <dependency>
+    <groupId>org.slf4j</groupId>
+    <artifactId>slf4j-api</artifactId>
     <version>1.7.25</version>
 </dependency>
 </dependencies>
