--- a/buildwar/pom.xml
+++ b/buildwar/pom.xml
@@ -55,6 +55,7 @@ Creates a war file. Also includes additional static web resources, such as image
 <configuration>
 <failOnMissingWebXml>false</failOnMissingWebXml>   
 <filteringDeploymentDescriptors>true</filteringDeploymentDescriptors>
+<webXml>WebContent\WEB-INF\web.xml</webXml> 
 <webResources>
 <resource>
 <directory>${project.build.directory}/generated-resources</directory>
